# ccv

./: .gitignore  LICENSE  README.md
c1/c1e1/: CMakeLists.txt  draw.cpp  mouse.cpp
c1/c1e2/: CMakeLists.txt  measure.cpp  video.cpp
